Various changes to multiple plugins, buildscript and dependency updates * Rewrote IFluidHandler plugin * Rewrote Mekanism plugin * Removed ExtraUtilities plugin (redundant due to IFluidHandler)

--- a/repositories.gradle
+++ b/repositories.gradle
@@ -19,4 +19,8 @@ repositories {
     maven {
         url = "https://jitpack.io"
     }
+    maven {
+        name = "Thorfusion"
+        url = "https://maven.thorfusion.com/artifactory/central"
+    }
 }
