--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,45 +1,50 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:waila:1.5.18:dev")
+    implementation("com.github.GTNewHorizons:waila:1.6.0:dev")
 
-    compileOnly("com.github.GTNewHorizons:GT5-Unofficial:5.09.41.254:dev") {
+    implementation("com.github.GTNewHorizons:EnderCore:0.2.13:dev") {
         transitive = false
     }
-    compile("com.github.GTNewHorizons:EnderCore:0.2.6:dev") {
+
+    compileOnly("com.github.GTNewHorizons:GT5-Unofficial:5.09.43.30:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:ForestryMC:4.4.5:dev") {
+    compileOnly("com.github.GTNewHorizons:ForestryMC:4.6.5:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:StructureLib:1.0.15:dev") {
+    compileOnly("com.github.GTNewHorizons:StructureLib:1.2.6:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:Railcraft:9.13.19:dev") {
+    compileOnly("com.github.GTNewHorizons:Railcraft:9.14.1:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:BloodMagic:1.3.5:dev") {
+    compileOnly("com.github.GTNewHorizons:BloodMagic:1.4.1:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-70-GTNH:dev") {
+    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-211-GTNH:dev") {
+        transitive = false
+    }
+    compileOnly("com.github.GTNewHorizons:Buildcraft:7.1.33:dev") {
+        transitive = false
+    }
+
+    compileOnly("mekanism:Mekanism-Community-Edition:1.7.10-9.10.28:DEV") {
         transitive = false
     }
 
     compileOnly("curse.maven:pams-harvestcraft-221857:2270206") {
         transitive = false
     }
-    compileOnly("curse.maven:extra-utilities-225561:2264384") {
-        transitive = false
-    }
+
     compileOnly("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev") {
         transitive = false
     }
-    compileOnly("com.mod-buildcraft:buildcraft:7.1.23:dev") {
-        transitive = false
-    }
+
     compileOnly("org.projectlombok:lombok:1.18.22") {
         transitive = false
     }
+
     compileOnly files("dependencies/redlogic-59.1.13.jar")
     compileOnly files("dependencies/immibis-microblocks-59.1.2.jar")
 
