--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,27 +1,30 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:waila:1.5.18:dev")
+    compile("com.github.GTNewHorizons:waila:1.6.0:dev")
 
-    compileOnly("com.github.GTNewHorizons:GT5-Unofficial:5.09.41.254:dev") {
+    compileOnly("com.github.GTNewHorizons:GT5-Unofficial:5.09.43.184:dev") {
         transitive = false
     }
-    compile("com.github.GTNewHorizons:EnderCore:0.2.6:dev") {
+    compile("com.github.GTNewHorizons:EnderCore:0.2.17:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:ForestryMC:4.4.5:dev") {
+    compileOnly("com.github.GTNewHorizons:ForestryMC:4.6.14:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:StructureLib:1.0.15:dev") {
+    compileOnly("com.github.GTNewHorizons:MagicBees:2.6.6-GTNH:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:Railcraft:9.13.19:dev") {
+    compileOnly("com.github.GTNewHorizons:StructureLib:1.2.8:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:BloodMagic:1.3.5:dev") {
+    compileOnly("com.github.GTNewHorizons:Railcraft:9.14.9:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-70-GTNH:dev") {
+    compileOnly("com.github.GTNewHorizons:BloodMagic:1.4.3:dev") {
+        transitive = false
+    }
+    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-249-GTNH:dev") {
         transitive = false
     }
 
