--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,42 +1,47 @@
 // Add your dependencies here
 
 dependencies {
-    implementation("com.github.GTNewHorizons:waila:1.6.0:dev")
+    implementation("com.github.GTNewHorizons:waila:1.6.5:dev")
 
-    implementation("com.github.GTNewHorizons:EnderCore:0.2.13:dev") {
-        transitive = false
-    }
-
-    compileOnly("com.github.GTNewHorizons:GT5-Unofficial:5.09.43.30:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:ForestryMC:4.6.5:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:StructureLib:1.2.6:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:Railcraft:9.14.1:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:BloodMagic:1.4.1:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-211-GTNH:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:Buildcraft:7.1.33:dev") {
+    implementation("com.github.GTNewHorizons:EnderCore:0.2.18:dev") {
         transitive = false
     }
 
-    compileOnly("mekanism:Mekanism-Community-Edition:1.7.10-9.10.28:DEV") {
+    compileOnly("com.github.GTNewHorizons:GT5-Unofficial:5.09.44.83:dev") {
+        transitive = false
+    }
+    compileOnly("com.github.GTNewHorizons:ForestryMC:4.7.0:dev") {
+        transitive = false
+    }
+    compileOnly("com.github.GTNewHorizons:MagicBees:2.7.0-GTNH:dev") {
+        transitive = false
+    }
+    compileOnly("com.github.GTNewHorizons:StructureLib:1.2.9:dev") {
+        transitive = false
+    }
+    compileOnly("com.github.GTNewHorizons:Railcraft:9.15.1:dev") {
+        transitive = false
+    }
+    compileOnly("com.github.GTNewHorizons:BloodMagic:1.4.3:dev") {
+        transitive = false
+    }
+    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-282-GTNH:dev") {
+        transitive = false
+    }
+    compileOnly("com.github.GTNewHorizons:BuildCraft:7.1.36:dev") {
         transitive = false
     }
 
     compileOnly("curse.maven:pams-harvestcraft-221857:2270206") {
         transitive = false
     }
+    compileOnly("curse.maven:extra-utilities-225561:2264384") {
+        transitive = false
+    }
 
+    compileOnly("mekanism:Mekanism-Community-Edition:1.7.10-9.10.32:DEV") {
+        transitive = false
+    }
     compileOnly("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev") {
         transitive = false
     }
