--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,30 +1,30 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:waila:1.6.0:dev")
+    api("com.github.GTNewHorizons:waila:1.6.5:dev")
 
-    compileOnly("com.github.GTNewHorizons:GT5-Unofficial:5.09.44.14:dev") {
+    compileOnly("com.github.GTNewHorizons:GT5-Unofficial:5.09.45.23:dev") {
         transitive = false
     }
-    compile("com.github.GTNewHorizons:EnderCore:0.2.17:dev") {
+    api("com.github.GTNewHorizons:EnderCore:0.3.0:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:ForestryMC:4.6.14:dev") {
+    compileOnly("com.github.GTNewHorizons:ForestryMC:4.8.0:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:MagicBees:2.7.0-GTNH:dev") {
+    compileOnly("com.github.GTNewHorizons:MagicBees:2.7.1-GTNH:dev") {
         transitive = false
     }
     compileOnly("com.github.GTNewHorizons:StructureLib:1.2.9:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:Railcraft:9.15.0:dev") {
+    compileOnly("com.github.GTNewHorizons:Railcraft:9.15.3:dev") {
         transitive = false
     }
     compileOnly("com.github.GTNewHorizons:BloodMagic:1.4.3:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-254-GTNH:dev") {
+    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-306-GTNH:dev") {
         transitive = false
     }
 
